Update GEMINI.md and index.html with latest content and design adjustments.

--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wow! Taiwan Selects 東南亞巡迴推廣活動深度分析</title>
+    <title>Wow! Taiwan Selects 東南亞巡迴推廣活動</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         :root {
-            --color-primary: #ffff00; /* Consistent Bright Yellow for all titles */
-            --color-accent: #ffff00; /* Consistent Bright Yellow for all titles */
-            --color-text: #FFFFFF; /* White */
-            --color-background: #000000; /* Black */
-            --color-border: #444444; /* Dark Gray for borders */
+            --color-primary: #ffff00; /* Yellow for titles */
+            --color-accent: #aaaaaa; /* Lighter gray for accents */
+            --color-text: #ffffff; /* White for body text */
+            --color-background: #111111; /* Black background */
+            --color-border: #555555; /* Darker gray for borders */
             --font-family-base: 'Noto Sans TC', sans-serif;
             --font-family-heading: 'Noto Sans TC', sans-serif;
         }
@@ -20,10 +20,10 @@
             font-family: var(--font-family-base);
             background-color: var(--color-background);
             color: var(--color-text);
-            font-size: 11pt; /* 11pt font size */
-            line-height: 1.8;
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            font-size: 14px; /* Reduced font size for body text */
         }
         h1, h2, h3, h4, h5, h6 {
             font-family: var(--font-family-heading);
@@ -33,41 +33,41 @@
         h1 {
             font-size: 3.5rem;
             font-weight: 700;
-            margin-bottom: 0.5rem;
-            letter-spacing: 0.05em;
+            margin-bottom: 2rem;
             text-align: center;
+            color: var(--color-primary);
         }
         h2 {
-            font-size: 1.75rem;
+            font-size: 2.25rem; /* Increased font size for subtitles */
             margin-top: 4rem;
-            margin-bottom: 2rem; /* Increased bottom margin for separation */
+            margin-bottom: 3rem; /* Increased bottom margin for separation */
             padding-bottom: 0.75rem;
             border-bottom: 1px solid var(--color-border);
             color: var(--color-primary);
         }
         h3 {
-            font-size: 1.25rem;
+            font-size: 1.4rem; /* Bolder for distinction */
             font-weight: 700; /* Bolder for distinction */
             color: var(--color-primary); /* Unified color */
             margin-top: 3rem; /* Increased top margin for separation */
-            margin-bottom: 1.5rem; /* Increased bottom margin for separation */
+            margin-bottom: 2rem; /* Increased bottom margin for separation */
         }
         p {
-            margin-bottom: 1.5rem;
+            margin-bottom: 2rem;
             text-align: justify;
+            color: var(--color-text);
         }
         .subtitle {
             font-size: 1.5rem;
-            color: var(--color-primary); /* Unified color */
-            margin-bottom: 3rem;
-            font-weight: 400;
+            margin-bottom: 4rem;
             text-align: center;
+            color: var(--color-primary);
         }
         .image-grid {
             margin: 4rem 0;
         }
         .image-grid img {
-            transition: transform 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+            transition: transform 0.3s ease;
             border: 1px solid var(--color-border);
         }
         .image-grid img:hover {
@@ -98,17 +98,19 @@
 </head>
 <body class="">
 
-    <main class="max-w-screen-md mx-auto px-4 py-16 md:py-24">
+    <main class="max-w-screen-sm mx-auto px-4 py-16 md:py-24">
 
         <header class="text-center mb-16 fade-in-section">
             <h1>Wow! Taiwan Selects</h1>
-            <p class="subtitle">東南亞巡迴推廣活動深度分析</p>
+            <p class="subtitle">東南亞巡迴推廣活動</p>
         </header>
 
         <article>
             <section class="fade-in-section">
                 <p>由經濟部國際貿易局（BOFT）委託商業發展研究院（CDRI）自2015年起辦理的「Wow! Taiwan Selects」系列活動，首站自越南胡志明市起跑，此後每年巡迴東南亞多個主要城市，成為臺灣新南向政策下行銷臺灣品牌的創新平台。</p>
             </section>
+
+            <br>
 
             <section class="fade-in-section">
                 <h2>一、活動影響力與效益</h2>
@@ -175,13 +177,14 @@
 
             <section class="fade-in-section">
                 <h2>四、政府角色與政策支持</h2>
-                <h3>政策定位與資源投入</h3>
                 <p>「Wow! Taiwan Selects」明確定位為政府推動的新南向經貿交流項目之一。經濟部國際貿易局自2015年起擔任幕後推手，委由商研院執行這一創新海外行銷計畫。2016年蔡英文政府上任後將新南向政策列為重點，該活動更獲得延續擴大。貿易局主動結合新南向政策目標，鎖定東協新興市場消費商機。2015年此計畫實施時正值「優質平價新興市場拓銷計畫」最後一年，政府多年累積的新興市場研究成果也融入了活動策劃。這表示政府不僅提供資金，更提供了市場數據、人脈網絡等軟實力支援，提升活動的專業度和精準性。</p>
                 <h3>跨單位協調與策略連結</h3>
                 <p>活動的成功離不開政府多部門的協調配合與駐外單位的支持。例如各國開幕時我駐外代表處官員（如駐泰代表童振源、駐馬大使章計平）親臨站台，致詞強調臺馬、臺泰經貿合作緊密及新南向政策與當地發展戰略相契合。章計平大使在2018年馬來西亞活動致詞中特別指出，「Wow! Taiwan Selects自2015年起已巡迴多個東協國家，每年以不同主題帶來多樣的MIT優質商品給大家」，並強調今年已是第二次來馬來西亞，展現政府持續深耕的決心。</p>
                 <p>此外，貿易局與商研院積極運用數位工具強化政策效果：2018年起打造D2B線上平台，提供買主資料庫、線上洽談等服務，讓實體活動與線上後續對接相結合，提升長期成效。政府還鼓勵參展廠商利用臺灣精品、Taiwan Excellence、臺灣形象展等既有國家品牌資源，與Wow! Taiwan Selects形成宣傳綜效。</p>
                 <p>整體而言，政府在此計畫中扮演了策劃者、推動者與後盾的角色：從政策面給予明確方向，從資源面提供經費與資訊，從執行面透過駐外單位和相關機構協力，確保活動每站都能順利舉辦並達成預期目標。此一模式充分體現了新南向政策下官民合作、整合資源開拓海外市場的成功經驗。</p>
             </section>
+
+            <br>
 
             <section class="fade-in-section" id="references">
                 <h2>參考資料</h2>
